--- a/dropboxLoader/index.html
+++ b/dropboxLoader/index.html
@@ -12,18 +12,24 @@
 </head>
 <body>
 <form>
-    <input type="file" name="dbupload" id="dbupload" />
+    <input style="display: none;" type="file" name="dbupload" id="dbupload" />
+    <a href="#" id="addUpload" class="btn btn-primary btn-sm">Add File</a>
     <div id="files"></div>
-    <div id="filediv" style="display: none">
-        <p class="filename"></p>
-        <p class="status"></p>
-        <div class="progress" style="display: none;">
+    <div id="filediv" style="display: none;" class="row">
+        <div class="filename col-lg-3"></div>
+        <div class="col-lg-2">
+            <a href="#" id="upload" class="btn btn-xs btn-primary">Upload</a>
+            <a href="#" id="pause" class="btn btn-xs btn-primary" style="display: none;">Pause</a>
+            <a href="#" id="cancel" class="btn btn-xs btn-primary" style="display: none;">Cancel</a>
+        </div>
+        <div class="status col-lg-1"><span class="" style="cursor: pointer;"></span></div>
+        <div class="progress col-lg-4" style="display: none;padding: 0px;">
             <div class="progress-bar" role="progressbar" aria-valuemax="100" style="width: 0%;">
                 <span class="sr-only">0% Complete</span>
             </div>
         </div>
-        <a href="#" id="upload">Upload</a>
     </div>
+    <div id="error" class="alert alert-danger" style="display: none;"></div>
 </form>
 
 </body>
