added pause/cancel/resume, tested multiple concurrent upload

--- a/dropboxLoader/index.html
+++ b/dropboxLoader/index.html
@@ -17,7 +17,7 @@
     <div id="files"></div>
     <div id="filediv" style="display: none;" class="row">
         <div class="filename col-lg-3"></div>
-        <div class="col-lg-2">
+        <div id="buttons" class="col-lg-2">
             <a href="#" id="upload" class="btn btn-xs btn-primary">Upload</a>
             <a href="#" id="pause" class="btn btn-xs btn-primary" style="display: none;">Pause</a>
             <a href="#" id="cancel" class="btn btn-xs btn-primary" style="display: none;">Cancel</a>
