--- a/dropboxLoader/index.html
+++ b/dropboxLoader/index.html
@@ -25,7 +25,7 @@
         <div class="status col-lg-1"><span class="" style="cursor: pointer;"></span></div>
         <div class="progress col-lg-4" style="display: none;padding: 0px;">
             <div class="progress-bar" role="progressbar" aria-valuemax="100" style="width: 0%;">
-                <span class="sr-only">0% Complete</span>
+                <span style="color: #000000; width: 100%;">0% Complete</span>
             </div>
         </div>
     </div>
