--- a/dropboxLoader/index.html
+++ b/dropboxLoader/index.html
@@ -12,10 +12,10 @@
     <link href="public/css/style.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
-<form>
+<form style="width: 1024px;">
     <input style="display: none;" type="file" name="dbupload" id="dbupload" />
     <a href="#" id="addUpload" class="btn btn-primary btn-sm">Add File</a>
-    <div id="files" style="width: 1024px;"></div>
+    <div id="files"></div>
     <div id="filediv" style="display: none;padding: 10px;" class="row">
         <div class="filename col-lg-3"></div>
         <div class="progress col-lg-4" style="display: none;padding: 0px;">
