Expected time shown

--- a/dropboxLoader/index.html
+++ b/dropboxLoader/index.html
@@ -18,9 +18,9 @@
     <div id="files"></div>
     <div id="filediv" style="display: none;padding: 10px;" class="row">
         <div class="filename col-lg-3"></div>
-        <div class="progress col-lg-4" style="display: none;padding: 0px;">
+        <div class="progress col-lg-4" style="display: none;padding: 0px;background: #AAA">
             <div class="progress-bar" role="progressbar" aria-valuemax="100" style="width: 0%;">
-                <span style="color: #000000; width: 100%;">0% Complete</span>
+                <span style="color: white; width: 100%;position: absolute;left: 15px;">0% Complete</span>
             </div>
         </div>
         <div id="buttons" class="col-lg-1">
