Removed code for direct upload to dropbox, this removes auth popup problem

--- a/dropboxLoader/directupload.html
+++ b/dropboxLoader/directupload.html
@@ -40,7 +40,12 @@ and open the template in the editor.
             </div>
         </div>
     </div>
-      <div id="chooser"></div>
+      <div>
+          <a href="#" id="chooser" class=" dropbox-dropin-btn dropbox-dropin-default">
+              <span class="dropin-btn-status"></span>
+              Choose from Dropbox
+          </a>
+      </div>
       <div id="logout" class="btn btn-primary btn-xs">Logout Dropbox</div>
   </body>
 </html>
